# prompt-lab

./: .gitignore  README.md  deploy-dev.sh  deploy-full.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  seed_data.sql
backend/: .dockerignore  Dockerfile  env.example  main.py  pyproject.toml
backend/src/auth/application/service/: authentication_service.py  user_management_service.py
backend/src/auth/application/usecase/: approve_user_usecase.py  authentication_usecase.py  create_user_usecase.py  credential_management_usecase.py  source_management_usecase.py  team_management_usecase.py
backend/src/auth/domain/entity/: source.py  (+4 more)
backend/src/auth/presentation/: credential_router.py  router.py  source_router.py
backend/src/llm/: __init__.py
backend/src/llm/application/: __init__.py
backend/src/llm/domain/: __init__.py
backend/src/llm/infra/: __init__.py
backend/src/llm/presentation/: __init__.py  project_router.py  router.py
backend/src/shared/config/: settings.py
backend/src/shared/exception/: __init__.py  base_exception.py  business_exception.py  error_codes.py  infrastructure_exception.py
backend/src/shared/infra/: database.py  models.py
backend/src/shared/injector/: container.py
backend/src/shared/logging/: __init__.py  formatter.py  logger.py
backend/src/shared/response/: __init__.py  base_response.py
backend/src/shared/security/: __init__.py  api_key_validator.py  dependencies.py  email_validator.py  encryption.py  jwt_handler.py  password_hasher.py
backend/src/shared/web/: app.py  server.py
(+73 files in other folders)
